--- a/Css/global.css
+++ b/Css/global.css
@@ -6,6 +6,10 @@
     font-family: 'Karla', sans-serif
 }
 
+body {
+    background: var(--light-gray);
+}
+
 main {
     padding-top: 4.5rem;
     padding-inline: 2rem;
@@ -13,7 +17,7 @@ main {
 
 h1 {
     font-size: 20px;
-    color: var(--Cyan);
+    color: var(--cyan);
     line-height: 1.5rem;
     margin-bottom: 1.5rem;
 }
@@ -22,5 +26,6 @@ h2 {
     font-size: 18px;
     line-height: 1.375rem;
     color: white;
+    margin-bottom: 1.125rem;
 }
 
