--- a/Css/responivity.css
+++ b/Css/responivity.css
@@ -14,7 +14,7 @@
     }
 
     body {
-        min-height: 100%;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
