--- a/Css/global.css
+++ b/Css/global.css
@@ -16,16 +16,15 @@ main {
 }
 
 h1 {
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--cyan);
     line-height: 1.5rem;
     margin-bottom: 1.5rem;
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 1.375rem;
     color: white;
     margin-bottom: 1.125rem;
 }
-
