--- a/Css/main.css
+++ b/Css/main.css
@@ -5,17 +5,17 @@
     background: white;
 }
 
-.superior p:nth-of-type(1) {
+.superior section p:nth-of-type(1) {
     font-weight: 700;
     line-height: 1.25rem;
     color: var(--bright-yellow);
     margin-bottom: 1rem;
 }
 
-.superior p:nth-of-type(2) {
+.superior section p:nth-of-type(2) {
     line-height: 1.625rem;
     color: var(--grayish-blue);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .esquerda {
@@ -25,20 +25,20 @@
 }
 .mes p:nth-of-type(1) {
     color: white;
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 700;
     line-height: 2.375rem;
 }
 
-.esquerda p:nth-of-type(2) {
-    color: rgba(255, 255, 255, 0.5);
-    margin-left: 0.75rem;
+.mes p:nth-of-type(2) {
+    color: rgba(255, 255, 255, 0.5);  
 }
 
 .mes {
     display: flex;
     align-items: center;
     margin-bottom: 0.25rem;
+    gap: 0.75rem;
 }
 
 .esquerda>p {
@@ -51,7 +51,7 @@
     padding-block: 1rem;
     width: 100%;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 1.125rem;
     border: 0;
     background: var(--bright-yellow);
@@ -62,11 +62,11 @@
 .direita {
     background: var(--light-cyan);
     padding: 1.5rem;
-    border-bottom: 5px;
+    border-radius: 0 0 5px 5px;
 }
 
 .direita p {
     line-height: 1.25rem;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: rgba(255, 255, 255, 0.75);
 }
