--- a/Css/responsivity.css
+++ b/Css/responsivity.css
@@ -3,13 +3,14 @@
         display: flex;
     }
 
-    .esquerda, .direita {
+    .esquerda, 
+    .direita {
         width: 100%;
         padding: 2.5rem;
     }
 
     main {
-        max-width: 640px;
+        max-width: 40rem;
         padding: 0;
     }
 
@@ -21,29 +22,27 @@
     }
 
     .superior {
-        border-top: 8px;
+        border-radius: 8px 8px 0 0;
         padding: 2.5rem;
     }
 
     h1 {
-        font-size: 24px;
-        
+        font-size: 1.5rem;   
     }
 
-    .superior p:nth-of-type(1) {
-        font-size: 18px;
+    .superior section p:nth-of-type(1) {
+        font-size: 1.125rem;
     }
 
-    .superior p:nth-of-type(2) {
-        font-size: 16px;
+    .superior section p:nth-of-type(2) {
+        font-size: 1rem;
     }
 
     .esquerda {
-        border-bottom-left-radius: 8px;
+        border-radius: 0 0 0 8px;
     }
 
     .direita {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 8px;
+        border-radius: 0 0 8px 0;
     }
 }
