--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 @import "./Css/global.css";
 @import "./Css/colors.css";
 @import "./Css/main.css";
-@import "./Css/responivity.css"
+@import "./Css/responsivity.css"
